style(message-list): Correct alignment of dropdown. Fixes #659

--- a/internal_packages/message-list/stylesheets/message-list.less
+++ b/internal_packages/message-list/stylesheets/message-list.less
@@ -366,11 +366,7 @@ body.platform-win32 {
       width: 99px;
       height: 32px;
       opacity: 1;
-      text-align: right;
-    }
-
-    .button-dropdown {
-      width: 77px;
+      text-align: left;
     }
 
     .message-actions-ellipsis {
